Fix Create Post Functionality
In trying to add message Functionality an error arose where
i could no longer create a post so reverted back to my last
commit of 21.02.23 and deleted all my posts and left two
and when i went to create a post it worked -when
i tried to create a post previously it was saying i had
a duplicated slug

--- a/templates/messages.html
+++ b/templates/messages.html
@@ -1,26 +1,32 @@
 <!-- {% load i18n %} -->
-<html>
+<!-- <html>
 <head>
 <title>Messages</title>
 </head>
-</body>
-{% if messages %}
-<div class="messages">
-    {% for message in messages %}
-    <div{% if message.tags %} class="alert alert-sm alert-{{ message.tags }}" id="mess" {% endif %}>
-        {{ message | safe  }}
-    </div>
-    {% endfor %}"
-</div>
-{% endif %}
-</body>
+</body> -->
 
+
+<!-- {% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+      
+        {{ message }}
+    </li>
+    {% endfor %}
+</ul>
+{% endif %} -->
+
+
+
+
+<!-- 
 <script>
     setTimeout(function () {
         let messages = document.getElementById("mess");
         let alert = new bootstrap.Alert(messages);
         alert.close();
     }, 3000);
-</script>
+</script> -->
 
-</html>
+<!-- </html> -->
