fix update comment

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,18 +34,18 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-4">
            
 
-          {% if user.is_authenticated %}
+          <!-- {% if user.is_authenticated %}
             Welcome {{ 'user.first_name' }}
             <a href="{% url 'logout' %}">logout</a>   
 
           {% else %}
             <p>You are not logged in</p> -->
-          <a href="{% url 'login' %}">Log in</a>
+          <!-- <a href="{% url 'login' %}">Log in</a>
             <a href="{% url 'signup' %}">Sign Up</a> -->
-
-      {% endif %}
-<!--            -->
-               
+<!-- 
+      {% endif %} -->
+           -->
+                -->
 
 
 
