--- a/templates/display.html
+++ b/templates/display.html
@@ -5,14 +5,14 @@
 <h1>Construction Safety Information Blog</h1>
 <h3>Add Comment</h3>
 
-<form method="post">
+<!-- <form method="post">
     {% csrf_token %}
    
     {{ form.as_p }}
     
     <input type="Submit" value="Submit">
  
-</form>
+</form> -->
 <a href="{% url 'postread' %}"> 
 
 {% endblock %}
