Change code in admin, forms, models, urls, views
base, categoryadd and postcreate

--- a/templates/postcreate.html
+++ b/templates/postcreate.html
@@ -33,7 +33,7 @@
     <br>
    </a>
 
-  <form method="post"enctype="multipart/form-data" >
+  <form method="POST" enctype="multipart/form-data" >
 
     {% include 'messages.html' %}
 
