--- a/templates/base.html
+++ b/templates/base.html
@@ -106,6 +106,9 @@
               <a class="nav-link active" aria-current="page" href="{% url 'postread' %}">Home</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="{% url 'categoryadd' %}">Add A Category</a>
+            </li> 
+            <li class="nav-item">
               <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
             </li> 
          
