--- a/templates/base.html
+++ b/templates/base.html
@@ -105,9 +105,11 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'postread' %}">Home</a>
             </li>
+            {% comment %}
             <!-- <li class="nav-item">
               <a class="nav-link" href="{% url 'categoryadd' %}">Add A Category</a>
             </li>  -->
+            {% endcomment %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
             </li> 
