--- a/templates/base.html
+++ b/templates/base.html
@@ -114,23 +114,18 @@
 <div>
     {% block content %}
     <!-- Content Goes here -->
-<!-- 
   
-
-       
-
-
-   
 </div>
 
 </body>
 <footer>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      </div>
-  </nav>
-  <!-- <form class="d-flex"> -->
-    <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-4">
+    </div>
+
+
+  <div class="d-flex">
+    <ul class="navbar-nav me-auto mb-2 mb-lg-4">
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="#">Home</a>
       </li>
@@ -141,11 +136,18 @@
         <a class="nav-link" href="#">Register</a>
       </li>
       
-    </ul> -->
-    <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success" type="submit">Search</button> -->
-  <!-- </form> -->
-  {% endblock content %}
+    </ul> 
+  
+  </div>
+</nav>
+</footer>
+
+
+  </html>
+
+
+
+ <!-- {% endblock content %}
   <script>
     setTimeout(function () {
         let messages = document.getElementById("mess");
@@ -155,11 +157,5 @@
   </script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <!-- </body>
-  </html> -->
-</footer>
-
-
-</html>
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> --> 
+ <!-- </body> -->
