--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,6 @@
 .bg-col {
     background-color: rgb(1, 116, 129);
+
 }
 
 .navbar {
@@ -9,6 +10,7 @@
 
 .bg-color-main {
     background-color: rgb(237,177,79);
+    position: relative;
 }
 
 .background-image-main {
@@ -22,8 +24,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: rgb(237,177,79);
     opacity: 0.7;
 
@@ -31,7 +33,21 @@
 
 .block-content {
     position: relative;
-    z-index: 1;
-    color: white;
-    padding: 20px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    margin-top: -600px;
+    margin-bottom: 100px;
+    padding: 10px;
+  
+
+    color: black;
+    
+
+
+}
+
+.footer-info {
+    padding-top: 80px;
 }
