--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,8 @@
+/* Remove horizontal scroll */
+body {
+    overflow-x: hidden;
+}
+
 .bg-col {
     background-color: rgb(1, 116, 129);
 
@@ -6,11 +11,20 @@
 .navbar {
     position: relative;
     z-index: 1;
+    
+}
+
+
+
+.container-logo {
+    max-width: 30%;
 }
 
 .bg-color-main {
-    background-color: rgb(237,177,79);
-    position: relative;
+    height: 100vh;
+    width: 100vw;
+    /* background-color: rgb(237,177,79);
+    position: relative; */
 }
 
 .background-image-main {
@@ -20,25 +34,27 @@
     position: relative;
 } 
 
+/* Overlay coming down over main body image */
 .overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    height: 170vh;
     background-color: rgb(237,177,79);
     opacity: 0.7;
+    padding-bottom: 2px;
 
 }
 
 .block-content {
     position: relative;
-    top: 50%;
+    top: 1%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
-    margin-top: -600px;
-    margin-bottom: 100px;
+    margin-top: -350px;
+    margin-bottom: -700px;
     padding: 10px;
   
 
@@ -49,5 +65,36 @@
 }
 
 .footer-info {
-    padding-top: 80px;
+    padding-top: 11px;
 }
+
+.list-inline {
+    display: inline-block;
+}
+
+.footerstyling-target {
+    width: 30px;
+    height: 30px;
+    padding: 20px 1px;
+    border-radius: 40%;
+    font-size: 12px;
+    text-align: center;
+    color: rgb(237,177,79);
+    /* background: white; */
+
+}
+
+h4, h5, .phone, .email, .contribute  {
+    color: white;
+}
+
+#footer-info {
+    padding-top: 20px;
+}
+
+.phone, .email, .contribute {
+    font-size: larger;
+}
+
+/* postdetail page */
+
