--- a/templates/base.html
+++ b/templates/base.html
@@ -24,9 +24,9 @@
   <body>
   <div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-col">
-    <div class="container-fluid">
+    <div class="container-logo p-3">
       <a class="navbar-brand" href="#">
-      <img src="{% static 'images/Logo.jpg' %}" alt="logo" class="img-fluid" style="width: 300px; height: 150px">
+      <img src="{% static 'images/Logo.jpg' %}" alt="logo" class="img-fluid rounded-circle" style="width: 300px; height: 150px">
       </a>
       
       <!-- <a class="navbar-brand" href="#">Construction Safety Information Blog </a> -->
@@ -77,10 +77,22 @@
           {% endif %}
           </div>
 
+          {% if user.is_authenticated %}
+          <!-- <div class="welcome " style="font-weight: bold;"> -->
+           <div style="font-weight: bold" class="fs-3">Welcome :  &nbsp {{ user.username }}</div>
+        
+
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto justify-content-center">
-           {% if user.is_authenticated %}
-            <li>Welcome {{ user.username }}</li>
+            <ul class="navbar-nav mx-auto nav justify-content-end fs-3">
+
+              
+          
+<!-- 
+            </div> -->
+
+            <!-- <div class="menu"> -->
+        
+              
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="{% url 'postread' %}">Home</a>
             </li>
@@ -107,7 +119,8 @@
             
            {% endif %}
           </ul>
-            </div>
+          </div>
+            <!-- </div> -->
             
           </ul> 
           <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -118,7 +131,7 @@
   </nav>
 </div>
 <div class="bg-color-main">
-  <img src="{% static 'images/crane.jpg' %}" alt="logo" class="background-image-main" style="width: 100vw; height: 100vh">
+  <img src="{% static 'images/crane.jpg' %}" alt="logo" class="background-image-main" style="width: 100vw; height: 113vh">
     <div class="overlay"></div>
     <div class="block-content">
     {% block content %}
@@ -153,17 +166,34 @@
 
   <footer class="container-fluid bg-col">
     <div id="footer-info" class="row">
-      <!-- <div class="col-sm-4"> -->
+      <div class="col-sm-4">
         <H4>Construction Safety Information Blog</H4>
-        <p>Please contribute by posting on our blog. </p>
+        <p class="contribute fs-5">Please contribute by posting on our blog. </p>
       </div>
-      <!-- <div class="col-sm-4"> -->
+      <div class="col-sm-4">
         <h5>Social Meida Links</h5>
-        <p><a href="http://www.facebook.com" class="footerstyling-target" target="_blank" rel="noopener" aria-label="find us on facebook link opens in new page"><i class ="fa-brands fa-facebook"></i></a></p>
-        <p><a href="http://www.twitter.com" class="footerstyling-target" target="_blank" rel="noopener" aria-label="find us on twitter link opens in new page"><i class ="fa-brands fa-twitter-square"></i></a></p>
-        <p><a href="http://www.instagram.com" class="footerstyling-target" target="_blank" rel="noopener" aria-label="find us on instagram link opens in new page"><i class ="fa-brands fa-instagram-square"></i></a></p>
-      </div>
+        <ul class="list-inline social-links">
+          <li class="list-inline-item">
+          <a href="http://www.facebook.com" class="footerstyling-target" target="_blank" rel="noopener" aria-label="find us on facebook link opens in new page"><i class ="fa-brands fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
+          </li>
+          <li class="list-inline-item">
+            <a href="http://www.twitter.com" class="footerstyling-target" target="_blank" rel="noopener" aria-label="find us on twitter link opens in new page"><i class ="fa-brands fa-twitter-square" aria-hidden="true"></i><span class="sr-only">Twitter</span></a>
+            </li>
+            <li class="list-inline-item">
+              <a href="http://www.instagram.com" class="footerstyling-target" target="_blank" rel="noopener" aria-label="find us on instagram link opens in new page"><i class ="fa-brands fa-instagram-square" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
+              </li>
+        </ul>
+       
     </div>
+    <div class="col-sm-4 contact">
+      <h4>Contact Information</h4>
+      <p class="phone fs-5">TEL | &nbsp; 051 29635887</p>
+
+      <p class="email fs-5">EMAIL | &nbsp; info@csi.org</p>
+ 
+    </div>
+    </div>
+    
   </footer>
 
   <script>
