--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
 
 
 
-        <div class="ml-auto">
+        <!-- <div class="ml-auto">
           {% if messages %}
             <div class="messages">
               {% for message in messages %}
@@ -75,7 +75,7 @@
               {% endfor %}"
             </div>
           {% endif %}
-          </div>
+          </div> -->
 
           {% if user.is_authenticated %}
           <!-- <div class="welcome " style="font-weight: bold;"> -->
@@ -94,7 +94,7 @@
         
               
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'postread' %}">Home</a>
+              <a class="nav-link" aria-current="page" href="{% url 'postread' %}">Home</a>
             </li>
             {% comment %}
             <!-- <li class="nav-item">
@@ -114,7 +114,7 @@
               <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'postread' %}">Home</a>
+              <a class="nav-link" aria-current="page" href="{% url 'postread' %}">Home</a>
             </li>
             
            {% endif %}
@@ -132,7 +132,7 @@
 </div>
 <div class="bg-color-main">
   <img src="{% static 'images/crane.jpg' %}" alt="logo" class="background-image-main" style="width: 100vw; height: 113vh">
-    <div class="overlay"></div>
+  <div class="overlay"></div> 
     <div class="block-content">
     {% block content %}
     <!-- Content Goes here -->
@@ -140,52 +140,28 @@
 </div>
 </div>
 
-  <!-- <footer class="bg-col"> -->
-    <!-- <div class="navbar navbar-expand-lg navbar-dark bg-dark"> -->
-      <!-- <div class="container-fluid">
-      
-
-        <div class="d-flex">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-4">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Register</a>
-          </li>
-        
-        </ul> 
-    
-      </div>
-    </div> -->
-   <!-- </div> -->
-  <!-- </footer> -->
-
   <footer class="container-fluid bg-col">
     <div id="footer-info" class="row">
-      <div class="col-sm-4">
+      <div class="col-sm-4 text-center">
         <H4>Construction Safety Information Blog</H4>
         <p class="contribute fs-5">Please contribute by posting on our blog. </p>
       </div>
-      <div class="col-sm-4">
+      <div class="col-sm-4 text-center">
         <h5>Social Meida Links</h5>
         <ul class="list-inline social-links">
           <li class="list-inline-item">
-          <a href="http://www.facebook.com" class="footerstyling-target" target="_blank" rel="noopener" aria-label="find us on facebook link opens in new page"><i class ="fa-brands fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
+          <a href="http://www.facebook.com" class="footerstyling-target" target="_blank" rel="noopener" aria-label="find us on facebook link opens in new page"><i class ="fab fa-brands fa-facebook" aria-hidden="true"></i><span class="sr-only">Facebook</span></a>
           </li>
           <li class="list-inline-item">
-            <a href="http://www.twitter.com" class="footerstyling-target" target="_blank" rel="noopener" aria-label="find us on twitter link opens in new page"><i class ="fa-brands fa-twitter-square" aria-hidden="true"></i><span class="sr-only">Twitter</span></a>
+            <a href="http://www.twitter.com" class="footerstyling-target" target="_blank" rel="noopener" aria-label="find us on twitter link opens in new page"><i class ="fab fa-brands fa-twitter-square" aria-hidden="true"></i><span class="sr-only">Twitter</span></a>
             </li>
             <li class="list-inline-item">
-              <a href="http://www.instagram.com" class="footerstyling-target" target="_blank" rel="noopener" aria-label="find us on instagram link opens in new page"><i class ="fa-brands fa-instagram-square" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
+              <a href="http://www.instagram.com" class="footerstyling-target" target="_blank" rel="noopener" aria-label="find us on instagram link opens in new page"><i class ="fab fa-brands fa-instagram-square" aria-hidden="true"></i><span class="sr-only">Instagram</span></a>
               </li>
         </ul>
        
     </div>
-    <div class="col-sm-4 contact">
+    <div class="col-sm-4 contact text-center">
       <h4>Contact Information</h4>
       <p class="phone fs-5">TEL | &nbsp; 051 29635887</p>
 
@@ -198,7 +174,7 @@
 
   <script>
     setTimeout(function () {
-        let messages = document.getElementById("mess");
+        let messages = document.getElementById("msg");
         let alert = new bootstrap.Alert(messages);
         alert.close();
     }, 3000);
