Style create post page
style create post page. fix form display and add styling to style.css.
Start styling postupdate page.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -189,3 +189,19 @@ h1 .signin-heading {
 .postcreate-link:hover {
     color: white;
 }
+
+
+/* Create Post Page */
+.create-title {
+    margin: 0;
+}
+
+.center-form {
+    padding-top: 5px;
+}
+
+
+.create-submit {
+    background-color:  rgb(1, 116, 129);
+    padding: 5px;
+}
