--- a/templates/postread.html
+++ b/templates/postread.html
@@ -27,13 +27,40 @@
                     <a href="{% url 'postdetail' post.pk %}" class="postdetail-link">Read More </a>
                 </div>
             </div>
-            
+         
             </div>
         {% if forloop.counter|divisibleby:3 and not forloop.last %}
+
         </div>
             <div class="row">
         {% endif %}
     {% endfor %}
     </div>
+    {% if is_paginated %}
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; Previous </a>
+              <!-- <span aria-hidden="true">&laquo;</span>
+              <span class="sr-only">Previous</span>
+            </a> -->
+          </li>
+          {% endif %}
+          {% if page_obj.has_next %}
+          <li><a class="page-link" href="?page={{ page_obj.next_page_number }}" class="page-link">Next &raquo;</a></li>
+          {% endif %}
+          <!-- <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+              <span class="sr-only">Next</span>
+            </a>
+          </li> -->
+        </ul>
+      </nav>
+      {% endif %}
     </div>
  {% endblock %}
