--- a/templates/postupdate.html
+++ b/templates/postupdate.html
@@ -6,7 +6,7 @@
   <h3 class="text-center update-title">Update Post</h3>
 
   <div class="container">
-    <div class
+    <div class="center-form col-md-6" style="margin-top: -40px">
 
   {% if user.is_authenticated %}
     {% if user.id == post.contributor.id %}
@@ -17,7 +17,7 @@
     {% csrf_token %}
     {{ form.as_p }}
 
-  <input type="submit" value="Submit" />
+  <input type="submit" value="Submit" class="create-submit"/>
   <a href="{% url 'postread' %}"> 
     {% endif %}
     {% else %}
@@ -25,6 +25,7 @@
 
  {% endif %}
   </form>
+    </div>
   <br>
 
  
