--- a/templates/base.html
+++ b/templates/base.html
@@ -127,7 +127,7 @@
           <button class="btn btn-outline-success" type="submit">Search</button> -->
         </form>
       <!-- </div> -->
-    </div>
+   hello 
   </nav>
 </div>
 <div class="bg-color-main">
@@ -171,7 +171,7 @@
     </div>
     
   </footer>
-
+</div>
   <script>
     setTimeout(function () {
         let messages = document.getElementById("msg");
