--- a/static/css/style.css
+++ b/static/css/style.css
@@ -200,6 +200,26 @@ h1 .signin-heading {
     color: white;
 }
 
+.comment-title {
+    text-align: center;
+    padding: 4px;
+    background: rgb(1, 116, 129);
+}
+
+.commentadd-link,
+.commentupdate-link,
+.commentdelete-link {
+    color: rgb(1, 116, 129);
+    font-size: 20px;
+    text-decoration: none;
+}
+
+.commentadd-link:hover,
+.commentupdate-link:hover,
+.commentdelete-link:hover {
+    color: white;
+}
+
 
 /* Create Post Page */
 .create-title {
